# synapse-captcha

./: Dockerfile  README.md  config.sample.yaml  pyproject.toml
matrix_registration/: __init__.py  api.py  app.py  captcha.py  config.py  constants.py  matrix_api.py
matrix_registration/static/css/: style.css
matrix_registration/templates/: register.html
tests/: context.py  test_registration.py
